--- a/findly-builder/src/app/components/structured-data-status-modal/structured-data-status-modal.component.scss
+++ b/findly-builder/src/app/components/structured-data-status-modal/structured-data-status-modal.component.scss
@@ -71,7 +71,10 @@
                 top: -25px;
                 position: relative;
             }
-            }       
+            }    
+            .success-check.in-progress img {
+                opacity: 0.5 !important;
+            }  
         }
         .modal-footer{
             text-align: left;
